@@ -1,3 +1,8 @@
+2002-09-19  Lars Clausen  <lrclause@cs.uiuc.edu>
+
+	* objects/UML/uml.c (uml_get_operation_string): Patch from Mauf
+	<mfranzoni@madd.it>:  Check for the type being NULL.
+
 2002-09-16  Lars Clausen  <lrclause@cs.uiuc.edu>
 
 	* app/render_eps.c (set_font): Re-tweaked font size for printing.
